[package]
name = "todo"
version = "0.1.0"
authors = ["Simon Scatton <simon.scatton@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
webbrowser = "0.5.5"
serde = { version = "1.0.117", features = ["derive"]}
reqwest = { version = "0.11.4", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"